--- a/yo/app/views/main.html
+++ b/yo/app/views/main.html
@@ -4,21 +4,21 @@
 	<!-- <div class="tile-area tile-area-{{fgcolor}} bg-darkCyan"> -->
     <!-- <div class="grid fluid"> -->
 
-        <div class="tile-group double" >
+        <!-- <div class="tile-group double" >
         
             <a class="tile half bg-amber">
                 <div class="tile-content icon" >
                     <span class="icon-list"></span>
                 </div>
-                <!-- <div class="brand">
+                <div class="brand">
                     <span class="fg-white" style="margin: 5px">Lista de tarefas</span>
-                </div> -->
+                </div>
             </a>
-            <!-- end tile -->
+            end tile
     
             <a class="tile double bg-dark no-desktop no-tablet no-phone" > </a>
     
-            <!-- Inicio Itens da Lista de Tarefas -->
+            Inicio Itens da Lista de Tarefas
     
             
             <div class="tile half double bg-transparent">
@@ -68,9 +68,9 @@
             </div> 
             
     
-            <!-- Fim Itens da Lista de Tarefas -->
+            Fim Itens da Lista de Tarefas
     
-        </div>
+        </div> -->
         		
 		<div class="tile-group double" >
 	
@@ -79,7 +79,7 @@
 					<span class="icon-cart"></span>
 				</div>
 				<div class="brand">
-					<h2 class="fg-white text-center">Compras</h2>
+					<h2 class="fg-white padding10 text-center">Compras</h2>
 				</div>
 			</a> <a class="tile bg-blue" href="/bpm/purchase/request">
 				<div class="tile-content icon" style="top: -10pt">
@@ -183,5 +183,67 @@
 			</a>
 	
 		</div>
-		
+
+		<div class="tile-group double" >
+	
+			<a class="tile double bg-teal">
+				<div class="tile-content icon" style="top: -15pt">
+					<span class="icon-cog"></span>
+				</div>
+				<div class="brand">
+					<h2 class="fg-white padding10 text-center">Produ&ccedil;&atilde;o</h2>
+				</div>
+			</a> <a class="tile bg-teal">
+				<div class="tile-content icon" style="top: -10pt">
+					<span class="icon-list"></span>
+				</div>
+				<div class="brand bg-white">
+					<span class="label text-center no-margin fg-dark"
+						style="padding-top: 7px">Lista de Material</span>
+				</div>
+			</a>
+	
+			<a class="tile bg-teal">
+	              <div class="tile-content icon" style="top:-10pt">
+	                      <span class="icon-github-6"></span>
+	              </div>
+	              <div class="brand bg-white">
+	                      <span class="label text-center fg-dark">Processo</span>
+	              </div>
+	      </a>
+	
+			<a class="tile half bg-teal">
+				<div class="tile-content icon">
+					<span class="icon-flag-2"></span>
+				</div>
+			</a> <a class="tile half bg-teal">
+				<div class="tile-content icon">
+					<span class="icon-attachment"></span>
+				</div>
+			</a> <a class="tile half bg-teal">
+				<div class="tile-content icon">
+					<span class="icon-newspaper"></span>
+				</div>
+			</a> <a class="tile half bg-teal">
+				<div class="tile-content icon">
+					<span class="icon-link"></span>
+				</div>
+			</a> <a class="tile half double bg-teal">
+				<div class="tile-content">
+					<h3>
+						<i class="icon-play-2 fg-white" style="padding-left: 10px"></i><span
+							class="fg-white padding10">Ordens de Servi&ccedil;o</span>
+					</h3>
+				</div>
+			</a> <a class="tile half double bg-teal">
+				<div class="tile-content">
+					<h4>
+						<i class="icon-checkbox fg-white" style="padding-left: 10px"></i><span
+							class="fg-white padding10">Apontamento Produ&ccedil;&atilde;o</span>
+					</h4>
+				</div>
+			</a>
+	
+		</div>		
+
 	<!-- </div> -->
