upgrade gruntfile.js, add link to new module manufacturing/bom

--- a/yo/app/views/main.html
+++ b/yo/app/views/main.html
@@ -193,7 +193,7 @@
 				<div class="brand">
 					<h2 class="fg-white padding10 text-center">Produ&ccedil;&atilde;o</h2>
 				</div>
-			</a> <a class="tile bg-teal">
+			</a> <a class="tile bg-teal" href="http://s3-sa-east-1.amazonaws.com/sistema.altamira/index.html">
 				<div class="tile-content icon" style="top: -10pt">
 					<span class="icon-list"></span>
 				</div>
@@ -232,15 +232,15 @@
 				<div class="tile-content">
 					<h3>
 						<i class="icon-play-2 fg-white" style="padding-left: 10px"></i><span
-							class="fg-white padding10">Ordens de Servi&ccedil;o</span>
+							class="fg-white padding10">O.S. <!--Ordens de Servi&ccedil;o--></span>
 					</h3>
 				</div>
 			</a> <a class="tile half double bg-teal">
 				<div class="tile-content">
-					<h4>
+					<h3>
 						<i class="icon-checkbox fg-white" style="padding-left: 10px"></i><span
-							class="fg-white padding10">Apontamento Produ&ccedil;&atilde;o</span>
-					</h4>
+							class="fg-white padding10">Apontamento <!--Produ&ccedil;&atilde;o--></span>
+					</h3>
 				</div>
 			</a>
 	
