update bill of material list path

--- a/yo/app/views/main.html
+++ b/yo/app/views/main.html
@@ -1,4 +1,5 @@
 
+
 	<maintitle></maintitle>
 	
 	<!-- <div class="tile-area tile-area-{{fgcolor}} bg-darkCyan"> -->
@@ -193,7 +194,7 @@
 				<div class="brand">
 					<h2 class="fg-white padding10 text-center">Produ&ccedil;&atilde;o</h2>
 				</div>
-			</a> <a class="tile bg-teal" href="http://s3-sa-east-1.amazonaws.com/sistema.altamira/index.html">
+			</a> <a class="tile bg-teal" href="http://altamira.manufacturing.process.s3-website-sa-east-1.amazonaws.com/#/bom/list">
 				<div class="tile-content icon" style="top: -10pt">
 					<span class="icon-list"></span>
 				</div>
@@ -203,7 +204,7 @@
 				</div>
 			</a>
 	
-			<a class="tile bg-teal">
+			<a class="tile bg-teal" href="http://altamira.manufacturing.process.s3-website-sa-east-1.amazonaws.com/">
 	              <div class="tile-content icon" style="top:-10pt">
 	                      <span class="icon-github-6"></span>
 	              </div>
